--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Xyroinee - APIs</title> 
+  <title>SatganzDevs - APIs</title> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script> 
@@ -18,12 +18,12 @@
   <nav class="navbar"> 
    <div class="max-width"> 
     <div class="logo">
-     <a href="#">Xyroinee <span>ID</span></a>
+     <a href="#">SatganzDevs <span>ID</span></a>
     </div> 
     <ul class="menu"> 
      <li><a href="/" class="menu-btn">Home</a></li> 
      <li><a href="/login" class="menu-btn">Documentation</a></li> 
-     <li><a href="https://xyroinee.xyz" class="menu-btn">Portofolio</a></li> 
+     <li><a href="satganzdevs.cloud" class="menu-btn">Portofolio</a></li> 
     </ul> 
     <div class="menu-btn"> 
      <i class="fas fa-bars"></i> 
@@ -38,7 +38,7 @@
       Hello, My Name Is
      </div> 
      <div class="text-2">
-      Xyroinee
+      SatganzDevs
      </div> 
      <div class="text-3">
       And My Hobby Just 
@@ -50,7 +50,7 @@
   </section> 
   <!-- footer section start --> 
   <footer> 
-   <span>Copyright <span class="far fa-copyright"></span> 2023 <a href="https://xyroinee.xyz">Xyroinee</a>. All rights reserved.</span> 
+   <span>Copyright <span class="far fa-copyright"></span> 2023 <a href="satganzdevs.cloud">SatganzDevs</a>. All rights reserved.</span> 
   </footer> 
   <script>
     $(document).ready(function(){
